--- a/TeamAngular19Comfeco/src/app/auth/login/login.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/login/login.component.html
@@ -1,39 +1,34 @@
 <ul class="nav nav-pills nav-fill mb-5 justify-content-center" id="pills-tab" role="tablist">
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="pills-login-tab" data-toggle="pill" routerLink="/login" routerLinkActive="active"
-       role="tab" aria-controls="pills-login" aria-selected="true">Inicia Sesión</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="pills-register" data-toggle="pill" routerLink="/register" routerLinkActive="active"
-    role="tab" aria-controls="pills-profile" aria-selected="false">Regístrate</a>
-  </li>
+    <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-login-tab" data-toggle="pill" routerLink="/login" routerLinkActive="active" role="tab" aria-controls="pills-login" aria-selected="true">Inicia Sesión</a>
+    </li>
+    <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-register" data-toggle="pill" routerLink="/register" routerLinkActive="active" role="tab" aria-controls="pills-profile" aria-selected="false">Regístrate</a>
+    </li>
 </ul>
 <h3>Inicio de Sesión</h3>
 <form [formGroup]="form" (ngSubmit)="login()">
-  <div>
-    <div class="form-group">
-      <label for="correo">Correo</label>
-      <input type="email" class="form-control" id="correo" aria-describedby="emailHelp" formControlName="email"
-      [class.is-invalid]="emailNoValido">
-      <div class="invalid-feedback">
-        El formato del email es incorrecto.
-      </div>
-    </div>
-    
-    <div class="form-group">
-      <label for="pass">Contraseña</label>
-      <input type="password" class="form-control" id="pass" formControlName="pass"
-      [class.is-invalid]="passNoValido">
-      <div class="invalid-feedback">
-        La contraseña es requerida.
-      </div>
-    </div>
-    <div class="form-group">
-      <a [routerLink]="['/recovery-password']">¿Olvidó su contraseña?</a>
-    </div>
-    <div class="mt-4">
-      <button type="submit" class="btn btn-purple btn-block btn-lg">Iniciar Sesión</button>
-    </div>
-  </div>
-</form>
+    <div>
+        <div class="form-group">
+            <label for="correo">Correo</label>
+            <input type="email" class="form-control" id="correo" aria-describedby="emailHelp" formControlName="email" [class.is-invalid]="emailNoValido">
+            <div class="invalid-feedback">
+                El formato del email es incorrecto.
+            </div>
+        </div>
 
+        <div class="form-group">
+            <label for="pass">Contraseña</label>
+            <input type="password" class="form-control" id="pass" formControlName="pass" [class.is-invalid]="passNoValido">
+            <div class="invalid-feedback">
+                La contraseña es requerida.
+            </div>
+        </div>
+        <div class="form-group">
+            <a class="link" [routerLink]="['/recovery-password']">¿Olvidó su contraseña?</a>
+        </div>
+        <div class="mt-4">
+            <button type="submit" class="btn btn-purple btn-block btn-lg">Iniciar Sesión</button>
+        </div>
+    </div>
+</form>
