--- a/TeamAngular19Comfeco/src/app/pages/my-info/my-info.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/my-info.component.html
@@ -67,11 +67,11 @@
               </div>
             </div>
         </div>
-          
+
     </div>
     <div class="tab-pane fade" id="pills-groups" role="tabpanel" aria-labelledby="pills-groups-tab">
         <!--TODO GROUPS-->
-        <h5 class="text-center">Tab groups Works</h5>
+      <app-groups></app-groups>
     </div>
     <div class="tab-pane fade" id="pills-events" role="tabpanel" aria-labelledby="pills-events">
         <!--TODO EVENTES-->
