--- a/TeamAngular19Comfeco/src/styles.css
+++ b/TeamAngular19Comfeco/src/styles.css
@@ -1,48 +1,75 @@
 /*
 * Footer siempre pegado abajo
 */
+
 app-root {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 app-footer {
-  margin-top: auto;
+    margin-top: auto;
 }
+
 
 /*
 *Focus de los inputs
 */
+
 .form-control:focus {
-  color: #495057;
-  background-color: #fff;
-  border-color: #89188b;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgb(137 24 139 / 24%);
+    color: #495057;
+    background-color: #fff;
+    border-color: #89188b;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgb(137 24 139 / 24%);
 }
 
 .centrar-contenido {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .circle {
-  border-radius: 50%;
+    border-radius: 50%;
 }
 
 a {
-  color: #89188b;
-  text-decoration: none !important;
-  background-color: transparent;
+    color: #89188b;
+    text-decoration: none !important;
+    background-color: transparent;
 }
 
 a:hover {
-  color: #89188b;
-  text-decoration: none !important;
+    color: #89188b;
+    text-decoration: none !important;
 }
 
 .bg-purple {
-  background-color: #89188b !important;
+    background-color: #89188b !important;
+}
+
+.tarjeta-comunidad {
+    border-bottom: 5px solid #8A178C;
+    border-right: 5px solid #8A178C;
+    border-left: 5px solid #fdb602;
+    border-top: 5px solid #fdb602;
+}
+
+.comunidad-header {
+    background: linear-gradient( 90deg, rgba(82, 30, 135, 0.8) 0%, rgba(102, 28, 137, 0.8) 9.87%, rgba(138, 23, 140, 0.8) 30.04%, rgba(151, 43, 123, 0.8) 36.71%, rgba(189, 101, 73, 0.8) 58.41%, rgba(217, 144, 37, 0.8) 76.96%, rgba(235, 170, 14, 0.8) 91.4%, rgba(241, 180, 6, 0.8) 99.97%);
+}
+
+.ver-comunidad {
+    color: #FFF;
+}
+
+.ver-comunidad:hover {
+    color: #FFF;
+    border-bottom: 1px solid#FFF;
+}
+
+.link-comunidad:hover {
+    border-bottom: 1px solid#89188b;
 }
