--- a/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
@@ -1,71 +1,73 @@
 <div class="container-fluid px-5">
-  <div class="row">
-    <div class="col-12 col-sm-12 col-md-4 col-lg-3 mx-0 px-0">
-      <div class="px-2 sticky-top pt-2">
-        <div class="card border-dark mb-3 " >
-          <div class="card-header">
-            <div class="d-flex justify-content-between">
-              <div >
-                Mi grupo
-              </div>
-              <div >
-                Ir al Grupo
-              </div>
-            </div>
+    <h2 class="text-center mb-5">
+        <strong>Grupos</strong>
+    </h2>
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-4 col-lg-3 mx-0 px-0">
+            <div class="px-2 sticky-top pt-2">
+                <div class="card border-dark mb-3 borde">
+                    <div class="card-header">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                Mi grupo
+                            </div>
+                            <div>
+                                Ir al Grupo
+                            </div>
+                        </div>
 
-          </div>
-          <div class="card-body text-dark">
-            <h5 class="card-title">Dark card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
+                    </div>
+                    <div class="card-body text-dark">
+                        <h5 class="card-title">Dark card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="col-12 col-sm-12 col-md-8 col-lg-9 mx-0 px-0">
-      <div class="row mt-2">
-        <div class="col-4">
-          <select class="custom-select">
+        <div class="col-12 col-sm-12 col-md-8 col-lg-9 mx-0 px-0">
+            <div class="row mt-2">
+                <div class="col-4">
+                    <select class="custom-select">
             <option disabled selected>Filtrar por lenguaje</option>
             <option value="1">One</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
           </select>
-        </div>
-        <div class="col-8">
-          <div class="form-group">
+                </div>
+                <div class="col-8">
+                    <div class="form-group">
 
-            <!-- <input type="email" placeholder="Buscar por nombre" class="form-control" id="inputSearchGroup"
+                        <!-- <input type="email" placeholder="Buscar por nombre" class="form-control" id="inputSearchGroup"
                     >-->
-            <div class="input-group mb-3">
-              <input type="text" class="form-control border-right-0"
-                     placeholder="Buscar grupo" aria-label="Recipient's username" aria-describedby="basic-addon2">
-              <div class="input-group-append ">
-                <span class="input-group-text bg-transparent text-muted text-black-50" id="basic-addon2"><i
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control border-right-0" placeholder="Buscar grupo" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                            <div class="input-group-append ">
+                                <span class="input-group-text bg-transparent text-muted text-black-50" id="basic-addon2"><i
                   class="fas fa-search"></i></span>
-              </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
 
-          </div>
-        </div>
-      </div>
+            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 mt-4">
 
-      <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 mt-4">
+                <div class="col mb-4" *ngFor="let group of demoArray">
+                    <div class="card tarjeta h-100">
+                        <img src="https://via.placeholder.com/500" class="card-img-top" alt="...">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer ca.</p>
+                            <div class="px-1 mt-auto">
+                                <button class="btn btn-block btn-secondary bg-purple">Unirse</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-        <div class="col mb-4" *ngFor="let group of demoArray">
-          <div class="card h-100">
-            <img src="https://via.placeholder.com/500" class="card-img-top" alt="...">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer ca.</p>
-              <div class="px-1 mt-auto">
-                <button class="btn btn-block btn-secondary bg-purple">Unirse</button>
-              </div>
             </div>
-          </div>
         </div>
-
-      </div>
     </div>
-  </div>
 
 </div>
