--- a/TeamAngular19Comfeco/src/app/pages/my-info/my-info.component.css
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/my-info.component.css
@@ -4,6 +4,13 @@
             background-color: #6c757d;
         }
         
+        .card {
+            border-bottom: 5px solid #8A178C;
+            border-right: 5px solid #8A178C;
+            border-left: 5px solid #fdb602;
+            border-top: 5px solid #fdb602;
+        }
+        
         .botones {
             display: flex;
             justify-content: space-between;
