--- a/TeamAngular19Comfeco/src/app/pages/my-info/my-info.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/my-info.component.html
@@ -32,7 +32,7 @@
     <div class="tab-pane fade" id="pills-badges" role="tabpanel" aria-labelledby="pills-badges-tab">
         <!--TODO BADGES-->
         <div class="container-fluid mt-3">
-            <div class="row">
+            <div class="row mb-5">
                 <div class="col-lg-12 text-center">
                     <h2><strong>Insignias</strong></h2>
                 </div>
@@ -71,7 +71,7 @@
     </div>
     <div class="tab-pane fade" id="pills-groups" role="tabpanel" aria-labelledby="pills-groups-tab">
         <!--TODO GROUPS-->
-      <app-groups></app-groups>
+        <app-groups></app-groups>
     </div>
     <div class="tab-pane fade" id="pills-events" role="tabpanel" aria-labelledby="pills-events">
         <!--TODO EVENTES-->
@@ -86,7 +86,7 @@
                         <h5 class="card-tittle text-center">
                             <strong>{{item.title}}</strong>
                         </h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eius magni eaque quia fugit voluptatem ratione, alias ipsum aliquid esse odit repellat dicta nobis doloremque, quibusdam consequatur facilis ducimus doloribus.</p>
+                        <p class="card-text">{{item.description}}</p>
                         <div class="botones">
                             <a href="#" class="btn btn-outline boton1">Más información</a>
                             <button class="btn boton" (click)="setUserToEvent(userService.user.uid, item.id)">Participar</button>
