--- a/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid px-5">
+    <h2 class="text-center mb-5">
+        <strong>Grupos</strong>
+    </h2>
     <div class="row">
         <div class="col-12 col-sm-12 col-md-4 col-lg-3 mx-0 px-0">
             <div class="px-2 sticky-top pt-2">
