--- a/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.css
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.css
@@ -20,3 +20,18 @@
 button:hover {
     color: #000;
 }
+
+.icon-tecnologia {
+    width: 100%;
+    height: 100%;
+}
+
+img {
+    width: 20px;
+    height: 20px;
+}
+
+.grupo {
+    display: flex;
+    justify-content: space-between;
+}
