Imagen de grupos

--- a/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
@@ -21,7 +21,7 @@
                                     <div class="text-white">
                                         {{currentGroup.name}}
                                     </div>
-                                    <img [src]="currentGroup.urlImageLanguaje" alt="">
+                                    <img class="icono-lenguaje" [src]="currentGroup.urlImageLanguaje" alt="">
                                 </div>
                             </div>
                         </div>
