--- a/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.css
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.css
@@ -21,12 +21,7 @@ button:hover {
     color: #000;
 }
 
-.icon-tecnologia {
-    width: 100%;
-    height: 100%;
-}
-
-img {
+.icono-lenguaje {
     width: 20px;
     height: 20px;
 }
