--- a/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
@@ -16,7 +16,7 @@
                             </div>
                         </div>
                         <div class="div px-1 mt-2">
-                            <div class="bg-dark p-2">
+                            <div class="grupo-lenguaje p-2">
                                 <div class="grupo">
                                     <div class="text-white">
                                         {{currentGroup.name}}
