Imagen del recuperar contraseña

--- a/TeamAngular19Comfeco/src/app/components/contador/contador.component.html
+++ b/TeamAngular19Comfeco/src/app/components/contador/contador.component.html
@@ -6,19 +6,19 @@
         <div class="card-body">
             <div class="container">
                 <div class="row" style="font-size: 50px;">
-                    <div class="col-sm" id="num-dia">
+                    <div class="col-sm">
                         {{ day }}
-                        <p class="tiempo">Dias</p>
+                        <p class="tiempo">Días</p>
                     </div>
-                    <div class="col-sm" id="num-hora">
+                    <div class="col-sm">
                         {{ hour }}
                         <p class="tiempo">Horas</p>
                     </div>
-                    <div class="col-sm" id="num-minuto">
+                    <div class="col-sm">
                         {{ minutes }}
                         <p class="tiempo">Minutos</p>
                     </div>
-                    <div class="col-sm" id="num-segundo">
+                    <div class="col-sm">
                         {{ seconds }}
                         <p class="tiempo">Segundos</p>
                     </div>
@@ -28,16 +28,16 @@
         <div class="card-footer">
             <div class="container">
                 <div class="row" style="font-size: 15px;">
-                    <div class="col-sm" id="le-dia">
-                        Dias
+                    <div class="col-sm">
+                        Días
                     </div>
-                    <div class="col-sm" id="le-hora">
+                    <div class="col-sm">
                         Horas
                     </div>
-                    <div class="col-sm" id="le-minuto">
+                    <div class="col-sm">
                         Minutos
                     </div>
-                    <div class="col-sm" id="le-segundo">
+                    <div class="col-sm">
                         Segundos
                     </div>
                 </div>
