--- a/TeamAngular19Comfeco/src/app/pages/home/home.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row my-5">
-    <div class="col-6 offset-3 text-center">
+    <div class="col-lg-6 offset-lg-3 text-center">
       <div class="col-12">
         <h2>Bienvenidos a Community Fest and Code</h2>
       <h3>!Conoce gente, aprende y gana!</h3>
