--- a/TeamAngular19Comfeco/src/app/pages/my-info/my-info.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/my-info.component.html
@@ -36,31 +36,27 @@
                 <div class="col-lg-12 text-center">
                     <h2><strong>Insignias</strong></h2>
                 </div>
-                <div class="col mt-3" *ngFor="let item of insignias">
+                <div class="col mt-3" *ngFor="let item of badges">
                     <div class="card">
                         <div class="card-body">
                             <div class="text-center">
-                                <img style="max-width: 120px" class="circle " [src]="userService.user.urlAvatar" alt="">
+                                <img style="max-width: 120px" class="circle " [src]="item.urlImage" alt="">
                             </div>
                             <h5 class="card-title text-center font-weight-bold mt-3">
-                                {{userService.user?.displayName}}
+                                {{item.title}}
                             </h5>
                             <h6 class="text-center text-muted">
-                                Front End / UX
+                                Descripción
                             </h6>
                             <p class="card-text ">
-                                {{userService.user?.biography}}
+                                {{item.description}}
                             </p>
                             <hr>
                             <div class="d-flex justify-content-between">
-                                <h6>XDXD</h6>
-                            </div>
-                            <hr>
-                            <div class="d-flex justify-content-between">
-                                <h6>XDXD</h6>
+                                <h6>¿Como ganarla?</h6>
                             </div>
                             <div class="d-flex justify-content-between">
-                                <h6>Hello</h6>
+                                <h6>{{item.howGet}}</h6>
                             </div>
                         </div>
                     </div>
