--- a/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/groups/groups.component.html
@@ -1,82 +1,111 @@
 <div class="container-fluid px-5">
-    <h2 class="text-center mb-5">
-        <strong>Grupos</strong>
-    </h2>
-    <div class="row">
-        <div class="col-12 col-sm-12 col-md-4 col-lg-3 mx-0 px-0">
-            <div class="px-2 sticky-top pt-2">
-                <div class="card border-dark borde mb-3" *ngIf="currentGroup" style="background-color: #6c757d61;">
-                    <div class="card-header border-bottom-0 bg-transparent">
-                        <div class="d-flex justify-content-between">
-                            <div class="text-white">
-                                Mi grupo
-                            </div>
-                            <div>
-                                Ir al Grupo
-                            </div>
-                        </div>
-                        <div class="div px-1 mt-2">
-                            <div class="grupo-lenguaje p-2">
-                                <div class="grupo">
-                                    <div class="text-white">
-                                        {{currentGroup.name}}
-                                    </div>
-                                    <img class="icono-lenguaje" [src]="currentGroup.urlImageLanguaje" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-body text-dark">
-                        <h5 class="card-title">Dark card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-                        </p>
-                    </div>
-                </div>
+  <h2 class="text-center mb-5">
+    <strong>Grupos</strong>
+  </h2>
+  <div class="row">
+    <div class="col-12 col-sm-12 col-md-4 col-lg-3 mx-0 px-0">
+      <div class="px-2 sticky-top pt-2">
+        <div class="card border-dark borde mb-3 fade-in" *ngIf="currentGroup" style="background-color: #6c757d61;">
+          <div class="card-header border-bottom-0 bg-transparent">
+            <div class="d-flex justify-content-between">
+              <div class="text-white">
+                Mi grupo
+              </div>
+              <div>
+                Ir al Grupo
+              </div>
             </div>
+            <div class="div px-1 mt-2">
+              <div class="grupo-lenguaje p-2">
+                <div class="grupo">
+                  <div class="text-white">
+                    {{currentGroup.name}}
+                  </div>
+                  <img class="icono-lenguaje" [src]="currentGroup.urlImageLanguaje" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card-body text-dark" *ngIf="usersOfCurrentGroup">
+            <div *ngFor="let user of usersOfCurrentGroup">
+              <div class="row">
+                <div class="col-2"><img class="circle" [src]="user.urlAvatar" alt=""></div>
+                <div class="col-5">
+                  <strong>{{user.displayName}}</strong><br>
+                  <small class="text-muted">Rol</small>
+                </div>
+                <div class="co-5">
+                  <small class="text-muted">INTEGRANTE</small>
+                </div>
+              </div>
+              <hr>
+            </div>
+            <div class="row">
+              <div class="col-6 p-1">
+                <button (click)="leaveGroup()" class="btn btn-outline-secondary btn-block">Abandonar</button>
+              </div>
+              <div class="col-6 p-1">
+                <button class="btn btn-secondary btn-block">Ir al Chat</button>
+              </div>
+            </div>
+
+          </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-8 col-lg-9 mx-0 px-0">
-            <div class="row mt-2">
-                <div class="col-4">
-                    <select #element (change)="getGroupsByLang(element.value)" class="custom-select">
+
+        <div class="card border-dark borde mb-3 fade-in" *ngIf="!currentGroup" style="background-color: #6c757d61;">
+
+          <div class="card-body text-dark">
+            <h5 class="text-muted text-center">No esta en ningun grupo</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-sm-12 col-md-8 col-lg-9 mx-0 px-0">
+      <div class="row mt-2">
+        <div class="col-4">
+          <select #element (change)="getGroupsByLang(element.value)" class="custom-select">
             <option disabled selected>Filtrar por lenguaje</option>
             <option [value]="lang" *ngFor="let lang of dataService.getLanguajes()">{{lang}}</option>
 
           </select>
-                </div>
-                <div class="col-8">
-                    <div class="form-group">
-
-                        <!-- <input type="email" placeholder="Buscar por nombre" class="form-control" id="inputSearchGroup"
-                    >-->
-                        <div class="input-group mb-3">
-                            <input [formControl]="inputSearchControl" type="text" class="form-control border-right-0" placeholder="Buscar grupo" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                            <div class="input-group-append ">
-                                <span class="input-group-text bg-transparent text-muted text-black-50" id="basic-addon2"><i
-                  class="fas fa-search"></i></span>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 mt-4">
-
-                <div class="col mb-4" *ngFor="let group of filteredGroups">
-                    <div class="card h-100">
-                        <img src="{{group.urlImage}}" class="card-img-top" [alt]="group.name">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">{{group.name}}</h5>
-                            <div class="px-1 mt-auto">
-                                <button [disabled]="enteringGroup" (click)="joinUserToGroup(userService.user.uid,group.id)" class="btn btn-block btn-secondary bg-purple">Unirse
-                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
         </div>
+        <div class="col-8">
+          <div class="form-group">
+
+            <!-- <input type="email" placeholder="Buscar por nombre" class="form-control" id="inputSearchGroup"
+        >-->
+            <div class="input-group mb-3">
+              <input [formControl]="inputSearchControl" type="text" class="form-control border-right-0"
+                     placeholder="Buscar grupo" aria-label="Recipient's username" aria-describedby="basic-addon2">
+              <div class="input-group-append ">
+                                <span class="input-group-text bg-transparent text-muted text-black-50"
+                                      id="basic-addon2"><i
+                                  class="fas fa-search"></i></span>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 mt-4">
+
+        <div class="col mb-4 fade-in" *ngFor="let group of filteredGroups">
+          <div class="card h-100">
+            <img src="{{group.urlImage}}" class="card-img-top" [alt]="group.name">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">{{group.name}}</h5>
+              <div class="px-1 mt-auto">
+                <button [disabled]="enteringGroup" (click)="joinUserToGroup(userService.user.uid,group.id)"
+                        class="btn btn-block btn-secondary bg-purple">Unirse
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
+  </div>
 
 </div>
