Cambios de diseño

--- a/TeamAngular19Comfeco/src/app/pages/my-info/profile/profile.component.css
+++ b/TeamAngular19Comfeco/src/app/pages/my-info/profile/profile.component.css
@@ -9,6 +9,10 @@
     border-bottom: 1px solid#89188b;
 }
 
+.evento-interes {
+    align-items: center;
+}
+
 #icon-facebook {
     color: #1093F4;
     font-size: 35px;
